Improve Error/Exception Handling