@@ -1,5 +1,6 @@
 package com.project.attendance.ServiceImpl;
 
+import com.project.attendance.Exception.InternalServerException;
 import com.project.attendance.Exception.ResourceNotFoundException;
 import com.project.attendance.Model.Attendance;
 import com.project.attendance.Model.Batch;
@@ -38,78 +39,97 @@ public class AttendanceServiceImpl implements AttendanceService {
 
     @Override
     public AttendanceDTO markAttendance(Integer userId , Integer batchId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(()-> new ResourceNotFoundException("User" , "userId" , userId));
 
-        Batch batch = batchRepository.findById(batchId)
-                .orElseThrow(()-> new ResourceNotFoundException("Batch" , "batchId" , batchId));
+        try{
+
+            User user = userRepository.findById(userId)
+                    .orElseThrow(()-> new ResourceNotFoundException("User" , "userId" , userId));
+
+            Batch batch = batchRepository.findById(batchId)
+                    .orElseThrow(()-> new ResourceNotFoundException("Batch" , "batchId" , batchId));
 
 
-        Attendance existingAttendance = attendanceRepository.findByUserAndPresentDate(user , LocalDate.now()) ;
-        Attendance attendance = new Attendance() ;
+            Attendance existingAttendance = attendanceRepository.findByUserAndPresentDate(user , LocalDate.now()) ;
+            Attendance attendance = new Attendance() ;
 
-        if(existingAttendance != null){
-            throw new DuplicateKeyException("Already Attendance Marked") ;
+            if(existingAttendance != null){
+                throw new DuplicateKeyException("Already Attendance Marked") ;
+            }
+
+            if(user.getEnd_LocalDate().isBefore(LocalDate.now().plusDays(1))){
+                throw new SubscriptionExpireException(user.getEnd_LocalDate()) ;
+            }
+
+            attendance.setUser(user);
+            attendance.setBatch(batch);
+            attendance.setPresentDate(LocalDate.now());
+
+            Attendance createdAttendance = attendanceRepository.save(attendance) ;
+            return  modelMapper.map(attendance , AttendanceDTO.class);
+
+        }catch (Exception ex) {
+            throw new InternalServerException("Internal Server Error");
         }
 
-        if(user.getEnd_LocalDate().isBefore(LocalDate.now().plusDays(1))){
-            throw new SubscriptionExpireException(user.getEnd_LocalDate()) ;
-        }
-
-        attendance.setUser(user);
-        attendance.setBatch(batch);
-        attendance.setPresentDate(LocalDate.now());
-
-        Attendance createdAttendance = attendanceRepository.save(attendance) ;
-        return  modelMapper.map(attendance , AttendanceDTO.class);
     }
 
     @Override
     public AttendanceResponse getAllPresentDays(Integer userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(()-> new ResourceNotFoundException("User" , "userId" , userId));
+        try{
+            User user = userRepository.findById(userId)
+                    .orElseThrow(()-> new ResourceNotFoundException("User" , "userId" , userId));
 
-        List<Attendance> allAttendance = attendanceRepository.findByUser(user) ;
+            List<Attendance> allAttendance = attendanceRepository.findByUser(user) ;
 
-        List<LocalDate> presentDays = allAttendance.stream()
-                .map(Attendance::getPresentDate)
-                .toList();
+            List<LocalDate> presentDays = allAttendance.stream()
+                    .map(Attendance::getPresentDate)
+                    .toList();
 
-        int currentStreak = 0;
-        int maxStreak = 0;
-        LocalDate lastDate = null;
+            int currentStreak = 0;
+            int maxStreak = 0;
+            LocalDate lastDate = null;
 
-        for (LocalDate date : presentDays) {
-            if (lastDate == null || lastDate.plusDays(1).isEqual(date)) {
-                currentStreak++;
-            } else {
-                maxStreak = Math.max(maxStreak, currentStreak);
-                currentStreak = 1;
+            for (LocalDate date : presentDays) {
+                if (lastDate == null || lastDate.plusDays(1).isEqual(date)) {
+                    currentStreak++;
+                } else {
+                    maxStreak = Math.max(maxStreak, currentStreak);
+                    currentStreak = 1;
+                }
+                lastDate = date;
             }
-            lastDate = date;
-        }
-        maxStreak = Math.max(maxStreak, currentStreak);
+            maxStreak = Math.max(maxStreak, currentStreak);
 
-        return AttendanceResponse.builder()
-                .presentDays(presentDays)
-                .maxStreak(maxStreak)
-                .build() ;
+            return AttendanceResponse.builder()
+                    .presentDays(presentDays)
+                    .maxStreak(maxStreak)
+                    .success(true)
+                    .build() ;
+
+        }catch (Exception ex) {
+            throw new InternalServerException("Internal Server Error");
+        }
     }
 
     @Override
     public List<UserDTO> getAllPresentUserByBatch(Integer batchId , String date){
-        Batch batch = batchRepository.findById(batchId)
-                .orElseThrow(()-> new ResourceNotFoundException("Batch" , "batchId" , batchId));
 
-        LocalDate searchDate = LocalDate.parse(date) ;
-        List<Attendance> attendances = attendanceRepository.findByBatchAndPresentDate(batch ,searchDate ) ;
+        try{
+            Batch batch = batchRepository.findById(batchId)
+                    .orElseThrow(()-> new ResourceNotFoundException("Batch" , "batchId" , batchId));
 
-        List<User> users = attendances.stream()
-                .map(Attendance::getUser)
-                .toList();
+            LocalDate searchDate = LocalDate.parse(date) ;
+            List<Attendance> attendances = attendanceRepository.findByBatchAndPresentDate(batch ,searchDate ) ;
 
-        return users.stream()
-                .map(user -> modelMapper.map(user , UserDTO.class))
-                .collect(Collectors.toList());
+            List<User> users = attendances.stream()
+                    .map(Attendance::getUser)
+                    .toList();
+
+            return users.stream()
+                    .map(user -> modelMapper.map(user , UserDTO.class))
+                    .collect(Collectors.toList());
+        }catch (Exception ex) {
+            throw new InternalServerException("Internal Server Error");
+        }
     }
 }
